fix form button and aligned to center

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -435,6 +435,32 @@ ul.hug_content {
   display: inline;
 }
 
+.contact_submit {
+  align-self: center;
+  justify-self: center;
+  padding: 0.75rem 1rem;
+  width: 8.75rem;
+  height: 3rem;
+  background: #fff;
+  border-radius: 0.5rem;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  border: 2px solid transparent;
+}
+
+.footer__description {
+  color: white;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     width: 80%;
